style:returns margin

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/sophia.png" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
@@ -370,7 +370,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/sophia.png" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
@@ -382,7 +382,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/sophia.png" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
@@ -394,7 +394,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/sophia.png" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
@@ -406,7 +406,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/sophia.png" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
@@ -418,7 +418,7 @@
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
-                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/avatar.webp" alt="">
+                <img class="testimonial-avatar" width="50" height="50" src="./assets/testimonial/sophia.png" alt="">
                 <div class="flex flex-column">
                   <p class="m-0 fw-bold">Sophia Moore</p>
                   <p class="m-0">CEO at Webflow Agency</p>
