style: to top btn

--- a/blog.html
+++ b/blog.html
@@ -396,10 +396,10 @@
 		<p class="copy-right text-center p-2 m-0">© 2024 <a class="copy-right-link" href="https://hey-stack.com">Heystack™</a>. All Rights
 			Reserved.</p>
 	</div>
-	<button id="backToTopBtn" class="back-to-top-btn">
-		<img class="top-arrow" src="./assets/logo/totop.svg" alt="">
-		<p>Back to Top</p>
-	</button>
+  <button id="backToTopBtn" class="back-to-top-btn">
+    <img class="top-arrow" src="./assets/logo/totop.svg" alt="">
+    <p class="back-to-top-text">Back to Top</p>
+  </button>
 	<style type="text/css">
 		.blank {
 			height: 120px;
