--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
   </div>
   <button id="backToTopBtn" class="back-to-top-btn">
     <img class="top-arrow" src="./assets/logo/totop.svg" alt="">
-    <p>Back to Top</p>
+    <p class="back-to-top-text">Back to Top</p>
   </button>
 </body>
 
