--- a/minimize_returns.html
+++ b/minimize_returns.html
@@ -181,8 +181,8 @@
     </div>
     <button id="backToTopBtn" class="back-to-top-btn">
         <img class="top-arrow" src="./assets/logo/totop.svg" alt="">
-        <p>Back to Top</p>
-    </button>
+        <p class="back-to-top-text">Back to Top</p>
+      </button>
 
 </body>
 
