--- a/blog.html
+++ b/blog.html
@@ -93,14 +93,14 @@
 				style="display: flex; flex-direction: column; gap:10px; font-weight: 700;font-size: 1.5rem; height: min-content;">
 				Latest Post
 			</div>
-			<div style="display: flex; gap:2rem; flex-direction: row; flex-wrap: wrap;">
-				<div style=" flex: 1 1 0%; ;border-radius: .375rem;overflow: hidden;min-width: 400px;cursor: pointer;">
+			<div style="display: flex; gap:2rem; flex-direction: row; flex-wrap: wrap; align-items: center;">
+				<div style=" flex: 1 1 0%; justify-content: center; height: auto; border-radius: .375rem; overflow: hidden;min-width: 300px;cursor: pointer;">
 					<img src="https://media.graphassets.com/kdnTwU5XTt6EmPvJsdq3"
-						style="transition-duration: .5s; object-fit: cover; width:100%; height:20rem" alt="featuredImage"
+						style="transition-duration: .5s; object-fit: cover; width:100%; height:auto;" alt="featuredImage"
 						onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
 				</div>
 				<div
-					style="flex: 1 1 0%; display: flex; flex-direction: column; gap:30px; justify-content: center;min-width: 400px">
+					style="flex: 1 1 0%; display: flex; flex-direction: column; gap:30px; justify-content: center;min-width: 300px">
 					<div style="font-size: 1.875rem; line-height: 2.25rem; font-weight: 600;">
 						Usher in a New Era of Footwear Innovation with Online Review Analytics
 					</div>
@@ -131,7 +131,7 @@
 	</div>
 	<div style="display: flex; align-items: center; justify-content: center; padding: 40px; ">
 		<div style="display: flex; flex-direction:row; flex-wrap:wrap;  gap: 32px; width: 1290px;">
-			<div style="display: flex; flex-direction: column; gap: 20px; cursor: pointer; width: 30%; min-width: 350px;">
+			<div style="display: flex; flex-direction: column; gap: 20px; cursor: pointer; width: 30%; min-width: 300px;">
 				<div style="display: flex;flex-direction: column; gap:2rem; flex-wrap: wrap; justify-content: space-between;">
 					<div style="border-radius: .375rem;overflow: hidden;">
 						<img src="https://media.graphassets.com/kdnTwU5XTt6EmPvJsdq3"
@@ -171,7 +171,7 @@
 					</div>
 				</div>
 			</div>
-			<div style="display: flex; flex-direction: column; gap: 20px; cursor: pointer; width: 30%; min-width: 350px;">
+			<div style="display: flex; flex-direction: column; gap: 20px; cursor: pointer; width: 30%; min-width: 300px;">
 				<div style="display: flex;flex-direction: column; gap:2rem; flex-wrap: wrap;">
 					<div style=" border-radius: .375rem;overflow: hidden;">
 						<img src="https://media.graphassets.com/zoYcL2moTrGA804JuD3R"
@@ -211,7 +211,7 @@
 					</div>
 				</div>
 			</div>
-			<div style="display: flex; flex-direction: column; gap: 20px; cursor: pointer; width: 30%; min-width: 350px;">
+			<div style="display: flex; flex-direction: column; gap: 20px; cursor: pointer; width: 30%; min-width: 300px;">
 				<div style="display: flex;flex-direction: column; gap:2rem; flex-wrap: wrap;">
 					<div style=" border-radius: .375rem;overflow: hidden;">
 						<img src="https://media.graphassets.com/wQBRudsQeaMjt44vt4B9"
@@ -251,7 +251,7 @@
 					</div>
 				</div>
 			</div>
-			<div style="display: flex; flex-direction: column; gap: 20px; cursor: pointer; width: 30%; min-width: 350px;">
+			<div style="display: flex; flex-direction: column; gap: 20px; cursor: pointer; width: 30%; min-width: 300px;">
 				<div style="display: flex;flex-direction: column; gap:2rem; flex-wrap: wrap;">
 					<div style=" border-radius: .375rem;overflow: hidden;">
 						<img src="https://media.graphassets.com/RVAxFT8nRQu9gI9N9IID"
@@ -295,7 +295,7 @@
 	</div>
 	<div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 40px;">
 		<div
-			style="display: flex; position: relative; min-width: 400px; flex-direction: row;background-color: white; flex-wrap: wrap; gap: 32px; width: 1290px; justify-content: space-between; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -2px rgba(0, 0, 0, .1); padding: 2.5rem; border-radius: 1.5rem;">
+			style="display: flex; position: relative; min-width: 300px; flex-direction: row;background-color: white; flex-wrap: wrap; gap: 32px; width: 1290px; justify-content: space-between; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -2px rgba(0, 0, 0, .1); padding: 2.5rem; border-radius: 1.5rem;">
 			<div
 				style="flex: 1 1 0%; background-image: radial-gradient(#D75A00, #542DE8, #EC276E); font-size: 3rem; line-height: 1; color: transparent; background-clip: text; font-weight: 1000;">
 				Hey Stack Articles Delivered straight to your inbox
