style: title padding

--- a/index.html
+++ b/index.html
@@ -84,20 +84,22 @@
       <img src="./assets/generative/semicircle.png" alt="" />
     </div>
     <div class="home-main position-relative d-flex align-items-center m-auto w-100">
-      <div class="d-flex flex-column w-100">
-        <div class="title-box paddingx-40 mb-2">
-          <h1 class="title text-center fw-bold">
-            Generative AI Powered Actionable Insights for Product Experience
-            Analytics
-          </h1>
-          <p class="text-center mt-3 mb-0 text-md-center">
-            Uncover actionable insights from millions of customer reviews
-            across hundreds of retailers to minimize returns, drive product
-            innovation, identify market gaps, and gain a competitive
-            advantage.
-          </p>
-          <div class="demo-btn text-center mt-4">
-            <a class="fw-bold" href="https://calendly.com/sharadkraj/heystack-demo" target="_blank">LIVE DEMO</a>
+      <div class="d-flex flex-column w-100 ">
+        <div class="title-box-container w-100 mb-2">
+          <div class="title-box paddingx-40 ">
+            <h1 class="title text-center fw-bold">
+              Generative AI Powered Actionable Insights for Product Experience
+              Analytics
+            </h1>
+            <p class="text-center mt-3 mb-0 text-md-center">
+              Uncover actionable insights from millions of customer reviews
+              across hundreds of retailers to minimize returns, drive product
+              innovation, identify market gaps, and gain a competitive
+              advantage.
+            </p>
+            <div class="demo-btn text-center mt-4">
+              <a class="fw-bold" href="https://calendly.com/sharadkraj/heystack-demo" target="_blank">LIVE DEMO</a>
+            </div>
           </div>
         </div>
         <div class="main-image w-100">
@@ -668,16 +670,16 @@
         <div class="w-100 d-flex gap-3">
           <div class="col">
             <p class="m-0 fw-bold">Name</p>
-            <input class="w-100" type="text"/>
+            <input class="w-100" type="text" />
           </div>
           <div class="col">
             <p class="m-0 fw-bold">Email</p>
-            <input class="w-100" type="email"/>
+            <input class="w-100" type="email" />
           </div>
         </div>
         <div>
           <p class="m-0 fw-bold">Subject</p>
-          <input class="w-100" type="text"/>
+          <input class="w-100" type="text" />
         </div>
         <div>
           <p class="m-0 fw-bold">Message</p>
