style: title padding

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
     <div class="home-main position-relative d-flex align-items-center m-auto w-100">
       <div class="d-flex flex-column w-100 ">
-        <div class="title-box-container w-100 mb-2">
+        <div class="title-box-containerw-100 mb-2">
           <div class="title-box paddingx-40 ">
             <h1 class="title text-center fw-bold">
               Generative AI Powered Actionable Insights for Product Experience
