--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
 				<div
 					style="flex: 1 1 0%; display: flex; flex-direction: column; gap:30px; justify-content: center;min-width: 300px">
 					<div style="font-size: 1.875rem; line-height: 2.25rem; font-weight: 600;">
-						Usher in a New Era of Footwear Innovation with Online Review Analytics
+						<a href="">Usher in a New Era of Footwear Innovation with Online Review Analytics</a>
 					</div>
 					<div style=" color: rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
 						UGG, a subsidiary of Deckers brands, made a name for itself with sheep’s wool boots. Featured on Oprah and
@@ -138,9 +138,9 @@
 							style="transition-duration: .5s; object-fit: cover; width:100%; height:20vh" alt="featuredImage"
 							onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
 					</div>
-					<div style="display: flex; flex-direction: column; gap:30px; height: 25vh; ">
+					<div class="blog-text-content" style="display: flex; flex-direction: column; gap:30px;">
 						<div style="font-size: 1.875rem; line-height: 2.25rem; font-weight: 600;">
-							Usher in a New Era of Footwear Innovation with Online Review Analytics
+							<a href="">Usher in a New Era of Footwear Innovation with Online Review Analytics</a>
 						</div>
 						<div style=" color: rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
 							UGG, a subsidiary of Deckers brands, made a name for itself with sheep’s wool boots. Featured on Oprah and
@@ -178,9 +178,9 @@
 							style="transition-duration: .5s; object-fit: cover; width:100%; height:20vh" alt="featuredImage"
 							onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
 					</div>
-					<div style="display: flex; flex-direction: column; gap:30px; height: 25vh;  ">
+					<div class="blog-text-content" style="display: flex; flex-direction: column; gap:30px; ">
 						<div style="font-size: 1.875rem; line-height: 2.25rem; font-weight: 600;">
-							2023 holiday season
+							<a href="">2023 holiday season</a>
 						</div>
 						<div style=" color: rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
 							The fiercely competitive landscape of Home Care, heightened by the post-pandemic focus on germ-killing
@@ -218,9 +218,9 @@
 							style="transition-duration: .5s; object-fit: cover; width:100%; height:20vh" alt="featuredImage"
 							onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
 					</div>
-					<div style="display: flex; flex-direction: column; gap:30px; height: 25vh;  ">
+					<div class="blog-text-content" style="display: flex; flex-direction: column; gap:30px; ">
 						<div style="font-size: 1.875rem; line-height: 2.25rem; font-weight: 600;">
-							Unraveling the Tapestry of Network Engineering: Building the Backbone of Connectivity
+							<a href="">Unraveling the Tapestry of Network Engineering: Building the Backbone of Connectivity</a>
 						</div>
 						<div style=" color: rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
 							In a world where connectivity is king, network engineering stands as the architect behind the scenes,
@@ -247,6 +247,7 @@
 							<a class="my-4 px-4 py-1"
 								style="background-color:rgb(241 245 249); border-radius: 100px; color: black; text-decoration: none;"
 								href="/tag/footwear">Artificial Intelligence</a>
+								<a href="">Artificial Intelligence</a>
 						</div>
 					</div>
 				</div>
@@ -258,9 +259,9 @@
 							style="transition-duration: .5s; object-fit: cover; width:100%; height:20vh" alt="featuredImage"
 							onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
 					</div>
-					<div style="display: flex; flex-direction: column; gap:30px; height: 25vh;  ">
+					<div class="blog-text-content" style="display: flex; flex-direction: column; gap:30px; ">
 						<div style="font-size: 1.875rem; line-height: 2.25rem; font-weight: 600;">
-							Artificial Intelligence (AI) stands as the pinnacle of human innovation
+							<a href="">Artificial Intelligence (AI) stands as the pinnacle of human innovation</a>
 						</div>
 						<div style=" color: rgb(103 103 103);font-size: .875rem; line-height: 1.25rem;">
 							Leaks show that OpenAI will be unveiling major updates to ChatGPT at its developer conference on 6
@@ -401,6 +402,11 @@
     <p class="back-to-top-text">Back to Top</p>
   </button>
 	<style type="text/css">
+		a {
+			text-decoration: none;
+			color: black;
+		}
+
 		.blank {
 			height: 120px;
 			width: 100%;
@@ -410,6 +416,15 @@
 			.blank {
 				height: 80px;
 				width: 100%;
+			}
+		}
+
+		@media (min-width: 768px) {
+			.blog-text-content {
+				height: 25vh;
+				display: flex;
+				flex-direction: column;
+
 			}
 		}
 
