--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
 
   </head>
 
-  <body class="position-relative">
+  <body class="position-relative" style=" font-family: Poppins, sans-serif;">
     <div class="navbar top-0 start-0">
       <div class="navbar-container">
         <a
@@ -618,6 +618,13 @@
         border-radius: 1.5rem;
         transform: rotate3d(0, 0, 1, 2deg);
       }
+      #latest-post a, #post-categories a{
+        transition: all;
+      }
+      #latest-post a:hover, #post-categories a:hover{
+        color: #660091!important;
+      }
+
     </style>
   </body>
   <script defer src="./assets/pages/utiles.js"></script>
