--- a/html/minimize_returns.html
+++ b/html/minimize_returns.html
@@ -5,36 +5,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Content | Hey-Stack</title>
-    <link rel="icon" href="./assets/logo/logo.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="./assets/logo/logo.ico">
+    <link rel="icon" href="../assets/logo/logo.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="../assets/logo/logo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./static/css/main.css" />
-    <link rel="stylesheet" href="./static/css/navbar.css">
-    <link rel="stylesheet" href="./static/css/totopbtn.css" />
-    <link rel="stylesheet" href="./static/css/minimize_returns.css">
-    <script defer src="./static/js/navbar.js"></script>
-    <script defer src="./static/js/totopbtn.js"></script>
+    <link rel="stylesheet" href="../static/css/main.css" />
+    <link rel="stylesheet" href="../static/css/navbar.css">
+    <link rel="stylesheet" href="../static/css/totopbtn.css" />
+    <link rel="stylesheet" href="../static/css/minimize_returns.css">
+    <script defer src="../static/js/navbar.js"></script>
+    <script defer src="../static/js/totopbtn.js"></script>
 </head>
 
 <body class="position-relative">
     <div class="navbar top-0 start-0">
         <div class="navbar-container">
             <a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
-                <img class="logo-img" src="./assets/logo/logo.ico" alt="" />
+                <img class="logo-img" src="../assets/logo/logo.ico" alt="" />
                 <span class="">Heystack</span>
             </a>
             <ul class="navbar-nav d-flex flex-row nav-main">
-                <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="index.html#customers">Customers</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="index.html#products">Prouducts</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="index.html#technology">Technology</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="index.html#retailers">Retailers</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="blog.html">Blogs</a> </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html#customers">Customers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html#products">Prouducts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html#technology">Technology</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html#retailers">Retailers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./blog.html">Blogs</a>
+                </li>
             </ul>
             <div class="nav-btn-container">
                 <button class="nav-btn">SEE LIVE IN ACTION</button>
@@ -48,23 +60,35 @@
         <div class="modal">
             <div class="modal-content">
                 <div class="modal-header d-flex justify-content-between">
-                    <a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
-                        <img class="logo-img" src="./assets/logo/logo.ico" alt="" />
+                    <a href="../index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+                        <img class="logo-img" src="../assets/logo/logo.ico" alt="" />
                         <span class="">Heystack</span>
                     </a>
                     <div class="close-btn modal-close">
-                        <span class="" style="color: rgb(143, 143, 143);"><img src="./assets/logo/close.svg"
+                        <span class="" style="color: rgb(143, 143, 143);"><img src="../assets/logo/close.svg"
                                 alt=""></span>
                     </div>
                 </div>
                 <div class="padding-24 paddingx-20">
-                    <ul class="modal-nav">
-                        <li class=""><a href="index.html">Home</a></li>
-                        <li class=""><a href="index.html#customers">Customers</a></li>
-                        <li class=""><a href="index.html#products">Products</a></li>
-                        <li class=""><a href="index.html#technology">Technology</a></li>
-                        <li class=""><a href="index.html#retailers">Retailers</a></li>
-                        <li class=""><a href="blog.html">Blogs</a></li>
+                    <ul class="navbar-nav d-flex flex-row nav-main">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html#customers">Customers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html#products">Prouducts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html#technology">Technology</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html#retailers">Retailers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./blog.html">Blogs</a>
+                        </li>
                     </ul>
                     <div class="modal-nav-btn-container">
                         <button class="modal-nav-btn">SEE LIVE IN ACTION</button>
@@ -78,7 +102,7 @@
         <h1 class="returns-title">Minimize Returns</h1>
         <div class="returns-image-container">
             <div class="w-100 text-center">
-                <img class="dashboard-image w-100 rounded-05" src="./assets/products/content.png" alt=""
+                <img class="dashboard-image w-100 rounded-05" src="../assets/products/content.png" alt=""
                     class="img-fluid rounded shadow">
             </div>
             <div class="w-100">
@@ -129,14 +153,14 @@
         <div class="footer-container padding-80">
             <div class="d-flex flex-column gap-3 font-14">
                 <div class="logo d-flex align-items-center gap-2">
-                    <img class="logo-img" src="./assets/logo/logo.ico" alt="" />
+                    <img class="logo-img" src="../assets/logo/logo.ico" alt="" />
                     <div>
                         <span class="font-20">Heystack</span>
                     </div>
                 </div>
                 <p class="m-0">The Green #8138 <br /> Dover, DE 19901</p>
                 <a href="https://www.linkedin.com/company/hey-stack/">
-                    <img class="linkedin" src="./assets/footer/linkedin.ico" alt="">
+                    <img class="linkedin" src="../assets/footer/linkedin.ico" alt="">
                 </a>
                 <div class="contact-info mb-4">
                     <p class="m-0"><a href="tel:+13022120040">Phone: +1 (302) 212-0040</a></p>
@@ -147,15 +171,15 @@
                 <div class="d-flex flex-wrap gap-5rem">
                     <div class="footer-links">
                         <p class="fw-bold">Home</p>
-                        <a class="mt-0 mb-0" href="index.html#customers">Customers</a>
-                        <a class="mt-3 mb-0" href="index.html#products">Products</a>
-                        <a class="mt-3 mb-0" href="index.html#testimonials">Testimonials</a>
-                        <a class="mt-3 mb-0" href="index.html#technology">Features</a>
-                        <a class="mt-3 mb-0" href="index.html#retailers">Retail Partners</a>
+                        <a class="mt-0 mb-0" href="../index.html#customers">Customers</a>
+                        <a class="mt-3 mb-0" href="../index.html#products">Products</a>
+                        <a class="mt-3 mb-0" href="../index.html#testimonials">Testimonials</a>
+                        <a class="mt-3 mb-0" href="../index.html#technology">Features</a>
+                        <a class="mt-3 mb-0" href="../index.html#retailers">Retail Partners</a>
                     </div>
                     <div class="footer-links">
                         <p class="fw-bold">Resourse</p>
-                        <a class="mt-0 mb-0" href="blog.html">Blogs</a>
+                        <a class="mt-0 mb-0" href="../html/blog.html">Blogs</a>
                         <a class="mt-3 mb-0" href="#career">Career</a>
                         <a class="mt-3 mb-0" href="#team-conditions">Teams of Service</a>
                         <a class="mt-3 mb-0" href="#privacy-policy">Privacy Policy</a>
@@ -171,7 +195,7 @@
                     </div>
                 </div>
                 <div class="location d-flex p-2 rounded-3">
-                    <img class="w-100" src="./assets/footer/location.png" alt="">
+                    <img class="w-100" src="../assets/footer/location.png" alt="">
                 </div>
             </div>
         </div>
@@ -180,9 +204,9 @@
             Reserved.</p>
     </div>
     <button id="backToTopBtn" class="back-to-top-btn">
-        <img class="top-arrow" src="./assets/logo/totop.svg" alt="">
+        <img class="top-arrow" src="../assets/logo/totop.svg" alt="">
         <p class="back-to-top-text">Back to Top</p>
-      </button>
+    </button>
 
 </body>
 
