--- a/html/slug.html
+++ b/html/slug.html
@@ -5,46 +5,47 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hey-Stack | Blogs</title>
+  <link rel="icon" href="../assets/logo/logo.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./static/css/main.css" />
+  <link rel="stylesheet" href="../static/css/main.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="./static/css/testimonials.css" />
-  <link rel="stylesheet" href="./static/css/partners.css" />
-  <link rel="stylesheet" href="./static/css/navbar.css" />
-  <link rel="stylesheet" href="./static/css/totopbtn.css" />
-  <link rel="stylesheet" href="./static/css/book-modal.css" />
-
-  <script defer src="./static/js/main.js"></script>
+  <link rel="stylesheet" href="../static/css/testimonials.css" />
+  <link rel="stylesheet" href="../static/css/partners.css" />
+  <link rel="stylesheet" href="../static/css/navbar.css" />
+  <link rel="stylesheet" href="../static/css/totopbtn.css" />
+  <link rel="stylesheet" href="../static/css/book-modal.css" />
+  <link rel="stylesheet" href="../static/css/slug.css" />
+  <script defer src="../static/js/main.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 
 <body class="position-relative">
   <div class="navbar top-0 start-0">
     <div class="navbar-container">
-      <a href="index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
-        <img class="logo-img" src="./assets/logo/logo.ico" alt="" />
+      <a href="../index.html" class="logo d-flex align-items-center gap-2 navbar-brand">
+        <img class="logo-img" src="../assets/logo/logo.ico" alt="" />
         <span class="">Heystack</span>
       </a>
       <ul class="navbar-nav d-flex flex-row nav-main">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#customers">Customers</a>
+          <a class="nav-link" href="../index.html#customers">Customers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#products">Prouducts</a>
+          <a class="nav-link" href="../index.html#products">Prouducts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#technology">Technology</a>
+          <a class="nav-link" href="../index.html#technology">Technology</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#retailers">Retailers</a>
+          <a class="nav-link" href="../index.html#retailers">Retailers</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="blog.html">Blogs</a>
@@ -211,8 +212,10 @@
     </div>
   </div>
   <div class="blank"></div>
-  <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;padding: 100px; gap: 70px;">
-    <div style="display: flex;flex-direction: row; gap: 32px;  flex-wrap: wrap;">
+  <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 70px;"
+    class="main">
+    <div style="display: flex;flex-direction: row; gap: 32px;  flex-wrap: wrap; padding-top: 100px; max-width: 1280px;"
+      class="container-top">
       <div style="flex: 2 1 0%; " id="blog-one"></div>
       <div style="flex: 1 1 0%" id="right-bar">
 
@@ -277,9 +280,13 @@
       </div>
     </div>
   </div>
-  <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; border-color: #e5e7eb transparent transparent transparent; border-style: solid;  border-width: 1px;">
-    <div style="padding: 15px 80px 20px 80px;display: flex; flex-direction: column; align-items:center; ">
-      <div style=" text-align: left; width:100%; padding: 0px 60px 40px; background: linear-gradient(#542de8, #ec276e, #d75a00);background-clip: text; color: transparent;font-size: 36px;line-height: 2.5rem; font-weight:800">Latest Blogs</div>
+  <div
+    style="display: flex; flex-direction: column; align-items: center; justify-content: center; border-color: #e5e7eb transparent transparent transparent; border-style: solid;  border-width: 1px;">
+    <div style="display: flex; flex-direction: column; align-items:center; max-width:1280px; padding-top:20px"
+      class="container-bottom">
+      <div
+        style=" text-align: left; width:100%; background: linear-gradient(#542de8, #ec276e, #d75a00);background-clip: text; color: transparent;font-size: 36px;line-height: 2.5rem; font-weight:800; padding-bottom: 80px;">
+        Latest Blogs</div>
       <div style="
           display: flex;
           flex-direction: row;
@@ -287,7 +294,7 @@
           gap: 25px;
           justify-content: center;
         " id="post-categories">
-      
+
       </div>
     </div>
   </div>
@@ -296,7 +303,7 @@
     <div class="footer-container padding-80">
       <div class="d-flex flex-column gap-3 font-14">
         <div class="logo d-flex align-items-center gap-2">
-          <img class="logo-img" src="./assets/logo/logo.ico" alt="" />
+          <img class="logo-img" src="../assets/logo/logo.ico" alt="" />
           <div>
             <span class="font-20">Heystack</span>
           </div>
@@ -306,7 +313,7 @@
           Dover, DE 19901
         </p>
         <a href="https://www.linkedin.com/company/hey-stack/">
-          <img class="linkedin" src="./assets/footer/linkedin.ico" alt="" />
+          <img class="linkedin" src="../assets/footer/linkedin.ico" alt="" />
         </a>
         <div class="contact-info mb-4">
           <p class="m-0">
@@ -321,15 +328,15 @@
         <div class="d-flex flex-wrap gap-5rem">
           <div class="footer-links">
             <p class="fw-bold">Home</p>
-            <a class="mt-0 mb-0" href="index.html#customers">Customers</a>
-            <a class="mt-3 mb-0" href="index.html#products">Products</a>
-            <a class="mt-3 mb-0" href="index.html#testimonials">Testimonials</a>
-            <a class="mt-3 mb-0" href="index.html#technology">Features</a>
-            <a class="mt-3 mb-0" href="index.html#retailers">Retail Partners</a>
+            <a class="mt-0 mb-0" href="../index.html#customers">Customers</a>
+            <a class="mt-3 mb-0" href="../index.html#products">Products</a>
+            <a class="mt-3 mb-0" href="../index.html#testimonials">Testimonials</a>
+            <a class="mt-3 mb-0" href="../index.html#technology">Features</a>
+            <a class="mt-3 mb-0" href="../index.html#retailers">Retail Partners</a>
           </div>
           <div class="footer-links">
             <p class="fw-bold">Resourse</p>
-            <a class="mt-0 mb-0" href="blog.html">Blogs</a>
+            <a class="mt-0 mb-0" href="./blog.html">Blogs</a>
             <a class="mt-3 mb-0" href="#career">Career</a>
             <a class="mt-3 mb-0" href="#team-conditions">Teams of Service</a>
             <a class="mt-3 mb-0" href="#privacy-policy">Privacy Policy</a>
@@ -345,7 +352,7 @@
           </div>
         </div>
         <div class="location d-flex p-2 rounded-3">
-          <img class="w-100" src="./assets/footer/location.png" alt="" />
+          <img class="w-100" src="../assets/footer/location.png" alt="" />
         </div>
       </div>
     </div>
@@ -356,266 +363,16 @@
     </p>
   </div>
   <button id="backToTopBtn" class="back-to-top-btn">
-    <img class="top-arrow" src="./assets/logo/totop.svg" alt="" />
+    <img class="top-arrow" src="../assets/logo/totop.svg" alt="" />
     <p class="back-to-top-text">Back to Top</p>
   </button>
 </body>
-<style type="text/css">
-  .input-pink-in-button {
-    position: relative;
-    z-index: 2;
-  }
-
-  body {
-    color: #334155;
-    font-size: 18px;
-  }
-
-  .input-pink-in-button>input {
-    width: 100%;
-    padding: 10px 80px 10px 12px;
-    outline: none;
-    outline-width: 0;
-    border-style: none;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 7px;
-    transition-duration: 500ms;
-    transition: all;
-  }
-
-  .input-pink-in-button>input:focus {
-    width: 100%;
-    padding: 10px 80px 10px 12px;
-    border-color: rgb(236 72 153);
-    border-width: 2px;
-  }
-
-  .input-pink-in-button>button {
-    position: absolute;
-    padding: 8px 16px;
-    right: 4px;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgb(236 72 153);
-    border-style: none;
-    color: #fff;
-    height: inherit;
-    transition: all;
-    transition-duration: 300ms;
-    font-size: 0.75rem;
-    border-radius: 0.25rem;
-    box-shadow: 0px 10px 15px 3px rgba(236, 72, 152, 0.2);
-  }
-
-  .input-pink-in-button>button:hover {
-    background-color: rgb(236 72 153);
-    box-shadow: 0px 10px 15px -3px rgba(236, 72, 152, 0.4);
-  }
-
-  .input-pink-in-button>label {
-    position: absolute;
-    padding: 8px 16px;
-    left: 4px;
-    top: 50%;
-    transform: translateY(-50%);
-    border-style: none;
-    height: inherit;
-    transition: all;
-    transition-duration: 300ms;
-    border-radius: 0.25rem;
-    z-index: 0;
-    font-size: 0.875rem;
-    padding: 0;
-  }
-
-  .card-own {
-    z-index: 1 !important;
-  }
-
-  .card-own::after {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(191, 230, 245);
-    content: " ";
-    top: 0px;
-    left: 0px;
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-      0 2px 4px -2px rgba(0, 0, 0, 0.1);
-    padding: 2.5rem;
-    border-radius: 1.5rem;
-    transform: rotate3d(0, 0, 1, 2deg);
-  }
-
-  .brand-m {
-    height: auto;
-  }
-
-  .review-topic {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    font-size: 1.125rem;
-    line-height: 1.7777778;
-  }
-
-  @media (min-width: 1200px) {
-    .brand-m {
-      height: 35rem;
-    }
-  }
-
-  @media (max-width: 1200px) {
-    .progress-dynamic-bar {
-      display: none;
-    }
-  }
-
-  h1 {
-    font-size: 1.25rem;
-    font-weight: 700;
-    line-height: 1.75rem;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    color: #374151;
-  }
-
-  h2 {
-    font-size: 1.6666667em;
-    margin-top: 1.8666667em;
-    margin-bottom: 1.0666667em;
-    line-height: 1.3333333;
-    color: #0f172a;
-    font-weight: 700;
-  }
-
-  h3 {
-    font-size: 1.3333333em;
-    margin-top: 1.6666667em;
-    margin-bottom: 0.6666667em;
-    line-height: 1.5;
-    color: #0f172a;
-  }
-
-  h4 {
-    font-size: 1.25rem;
-    font-weight: 700;
-    line-height: 1.75rem;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
-
-  h5 {
-    font-size: 1.25rem;
-    font-weight: 700;
-    line-height: 1.75rem;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
-
-  h6 {
-    font-size: 1.25rem;
-    font-weight: 700;
-    line-height: 1.75rem;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
-
-  pre {
-    font-size: 0.8888889em;
-    line-height: 1.75;
-    margin-top: 2em;
-    margin-bottom: 2em;
-    border-radius: 0.375rem;
-    padding: 1em 1.5em;
-    color: #e2e8f0;
-    background-color: #1e293b;
-    font-weight: 400;
-    white-space-collapse: collapse;
-    overflow-x: auto;
-    /* Enables horizontal scrolling */
-    max-width: 100%;
-    /* Prevents exceeding parent width */
-    white-space: pre-wrap;
-    /* Keeps original formatting without wrapping */
-    width: 100%;
-    box-sizing: border-box;
-    /* Allows it to expand based on content */
-  }
-
-  code {
-    overflow-x: scroll;
-  }
-
-  table {
-    border-collapse: collapse;
-    font-size: 0.8888889em;
-    line-height: 1.5;
-    color: rgb(107 114 128);
-    width: 100%;
-    position: relative;
-    margin-top: 2em;
-    margin-bottom: 2em;
-    text-indent: 0;
-    border-color: inherit;
-    border-collapse: collapse;
-    border-spacing: 2px;
-  }
-
-  thead {
-    color: rgb(55 65 81);
-    text-transform: uppercase;
-    border-bottom-width: 1px;
-    border-bottom-color: #cbd5e1;
-    display: table-header-group;
-    vertical-align: middle;
-    unicode-bidi: isolate;
-    font-size: 0.8888889em;
-    line-height: 1.5;
-    text-align: left;
-  }
-
-  td {
-    padding: 0.75em;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-    vertical-align: baseline;
-    display: table-cell;
-    unicode-bidi: isolate;
-    text-align: left;
-    font-size: 0.8888889em;
-    line-height: 1.5;
-    border: 1px solid #e5e7eb;
-    border-color: transparent transparent #e5e7eb transparent;
-  }
-
-  td p {
-    margin-top: 1.3333333em;
-    margin-bottom: 1.3333333em;
-  }
-
-  th {
-    border: 1px solid #e5e7eb;
-    border-color: transparent transparent #e5e7eb transparent;
-  }
-
-  input::placeholder {
-    font-size: .875rem;
-    line-height: 0.5rem;
-  }
-  @media only screen and (max-width:800px){
-    #table-content{
-      display: none!important;
-    }
-  }
-</style>
-<script defer src="./assets/pages/utiles.js"></script>
-<script defer src="./assets/pages/slug/index.js"></script>
-<script defer src="./static/js/testimonials.js"></script>
-<script defer src="./static/js/partners.js"></script>
-<script defer src="./static/js/navbar.js"></script>
-<script defer src="./static/js/totopbtn.js"></script>
-<script defer src="./static/js/book-modal.js"></script>
+<script defer src="../static/js/pages/utiles.js"></script>
+<script defer src="../static/js/pages/slug/index.js"></script>
+<script defer src="../static/js/testimonials.js"></script>
+<script defer src="../static/js/partners.js"></script>
+<script defer src="../static/js/navbar.js"></script>
+<script defer src="../static/js/totopbtn.js"></script>
+<script defer src="../static/js/book-modal.js"></script>
 
 </html>
