--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li class="nav-item"> <a class="nav-link" href="#products">Prouducts</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#technology">Technology</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#retailers">Retailers</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="./blog.html">Blogs</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="./html/blog.html">Blogs</a> </li>
       </ul>
       <div class="nav-btn-container">
         <button class="nav-btn" id="open-book-modal">SEE LIVE IN ACTION</button>
@@ -250,7 +250,7 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a class="learn-btn" href="./minimize_returns.html" target="_blank">
+              <a class="learn-btn" href="./html/minimize_returns.html" target="_blank">
                 <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
@@ -275,7 +275,7 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a class="learn-btn" href="./minimize_returns.html" target="_blank">
+              <a class="learn-btn" href="./html/minimize_returns.html" target="_blank">
                 <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
@@ -292,7 +292,7 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a class="learn-btn" href="./minimize_returns.html" target="_blank">
+              <a class="learn-btn" href="./html/minimize_returns.html" target="_blank">
                 <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
@@ -317,7 +317,7 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a class="learn-btn" href="./minimize_returns.html" target="_blank">
+              <a class="learn-btn" href="./html/minimize_returns.html" target="_blank">
                 <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
@@ -334,7 +334,7 @@
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
               </p>
-              <a class="learn-btn" href="./minimize_returns.html" target="_blank">
+              <a class="learn-btn" href="./html/minimize_returns.html" target="_blank">
                 <img width="200" src="./assets/products/learn-btn.svg" alt="">
               </a>
               <div class="subline mt-3"></div>
@@ -617,7 +617,7 @@
           </div>
           <div class="footer-links">
             <p class="fw-bold">Resourse</p>
-            <a class="mt-0 mb-0" href="./blog.html">Blogs</a>
+            <a class="mt-0 mb-0" href="./html/blog.html">Blogs</a>
             <a class="mt-3 mb-0" href="./career">Career</a>
             <a class="mt-3 mb-0" href="./team-conditions">Teams of Service</a>
             <a class="mt-3 mb-0" href="./privacy-policy">Privacy Policy</a>
